[gd_scene load_steps=10 format=2]

[ext_resource path="res://Star.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/combo/filled-dmg-star.png" type="Texture" id=2]
[ext_resource path="res://assets/interfaces/combo/star.png" type="Texture" id=3]
[ext_resource path="res://assets/interfaces/combo/filled-focus-star.png" type="Texture" id=4]
[ext_resource path="res://assets/interfaces/combo/unfilled-star.png" type="Texture" id=5]
[ext_resource path="res://assets/interfaces/combo/small-star.png" type="Texture" id=6]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.00327869, 0.193443, 0.685246, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.898438, 0.898438, 0.898438, 1, 0.746094, 0.746094, 0.746094, 1, 0.804688, 0.804688, 0.804688, 0.509804, 0.785156, 0.785156, 0.785156, 0.0392157 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
angular_velocity = 28.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
damping = 22.0
angle = 45.0
angle_random = 1.0
color_ramp = SubResource( 2 )

[node name="Star" type="NinePatchRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 125, 0 )
script = ExtResource( 1 )

[node name="filledDamageStar" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="basicStar" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="filledFocusStar" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="unfillledStar" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 60, 60 )
scale = Vector2( 6, 6 )
emitting = false
amount = 20
lifetime = 1.6
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
process_material = SubResource( 3 )
texture = ExtResource( 6 )
